kind/2-apps-pods-replicaset/tc10-nr-service.yaml
# App Server for the Microservice
# Service Definition
apiVersion: v1
kind: Service
metadata:
  # Service Name: Ex. Catalogue Service
  name: tc10-n-service
  namespace: omega
  labels:
    app: tc10-n-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    # Instance Labels
    # Ex. Catalogue Service Instances
    app: tc10-n-pod
